--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" src="../Gemini-Clone/src/assets/gemini_icon.png" />
+    <link rel="icon" type="image/svg+xml" href="/gemini_icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gemini AI</title>
   </head>
